fix search overlay layout on mobile devices, add postcss-autoprefixer

--- a/src/components/channel-card/style.scss
+++ b/src/components/channel-card/style.scss
@@ -18,6 +18,7 @@
 
   &__channel-link {
     color: #212529;
+    text-decoration: none;
     transition: var(--transition-color);
   }
 
