--- a/src/components/range-slider/styles.scss
+++ b/src/components/range-slider/styles.scss
@@ -1,5 +1,6 @@
 .input-range-container {
   flex-grow: 1;
+  flex-shrink: 1;
   padding: 0 25px;
 
   &__label {
